tests/invalid/NegationType_Invalid_3.whiley
type LinkedList is null | {LinkedList next, int data}

function f(LinkedList x) -> !null | int:
    return x
